plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'jacoco'
    id "org.sonarqube" version "5.1.0.4882"
}

group = 'nl.fontys.s3'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

sonar {
    properties {
        property("sonar.projectKey", "copaco")
        property("sonar.projectName", "copaco")
        property("sonar.host.url", "http://localhost:9000")
        property("sonar.token", "sqp_5daf6275312c253fa0b42828a8223404380d2a1e")
        property "sonar.coverage.exclusions", "**/src/main/java/nl/fontys/s3/copacoproject/configuration/**,**/src/main/java/nl/fontys/s3/copacoproject/controller/**,**/src/main/java/nl/fontys/s3/copacoproject/domain/**,**/src/main/java/nl/fontys/s3/copacoproject/persistance/**"
    }

}

dependencies {
    // Spring Boot dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JPA and Hibernate dependencies
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Optional: H2 Database for testing and development
    runtimeOnly 'com.h2database:h2'

    // Lombok for reducing boilerplate code
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //Mssql
    implementation 'com.microsoft.sqlserver:mssql-jdbc'

    //MySQL deployment
    implementation 'mysql:mysql-connector-java:8.0.32'

    //PostgreSql
    implementation 'org.postgresql:postgresql:42.5.1'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
